# FlightioCrawler

./: .dockerignore  .env  .env.template  .gitignore  .gitignore.unified  .pre-commit-config.yaml  AIRPORT_SELECTOR_README.md  API_VERSIONING_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE.md  Dockerfile  Dockerfile.api  Dockerfile.crawler  Dockerfile.monitor  Dockerfile.optimized  Dockerfile.unified  Dockerfile.worker  LICENSE  Makefile  Makefile.optimized  PERSIAN_NLP_MIGRATION.md  PRODUCTION_SETUP.md  PROJECT_CLEANUP_SUMMARY.md  README.md  README_UNIFIED.md  REFACTORING_REPORT.md  TECHNICAL_DEBT.md  TECHNICAL_DEBT_RESOLUTION_PLAN.md  TECHNICAL_SPEC.md  TEST_TASKS.md  UNIFIED_PROJECT_INFO.md  USER_GUIDE.md  api-extras.txt  api_versioning.py  base_crawler.py  build.sh  cleanup_project.sh  config.py  data_manager.py  docker-compose.dev.yml  docker-compose.local.yml  (+73 more)
.github/workflows/: ci-cd.yml  ci.yml
adapters/: UNIFIED_ARCHITECTURE_PLAN.md  __init__.py  async_sync_bridge.py  crawlers_to_adapters_bridge.py  meta_crawler_factory.py  requests_to_adapters_bridge.py  unified_base_adapter.py  unified_config_schema.py  unified_crawler_interface.py  unified_crawler_monitor.py  unified_error_handler.py  unified_persian_text_bridge.py
adapters/base_adapters/: __init__.py  airline_crawler.py  base_crawler.py  base_site_crawler.py  common_error_handler.py  enhanced_base_crawler.py  enhanced_crawler_base.py  (+6 more)
api/: dependencies.py
config/: development.env  error_handling_config.json  logging_config.json  postgresql.conf  production.env  rate_limit_config.json  ssl.env  staging.env  unified_config.yml
core/: rate_limiter.py
crawlers/: __init__.py
docker/: base.Dockerfile
docs/: API_VERSIONING_GUIDE.md  BENCHMARK_RESULTS.md  BUILD_OPTIMIZATION_GUIDE.md  CONTINUOUS_MONITORING_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DESIGN_PATTERNS_GUIDE.md  DOCUMENTATION_CLEANUP_SUMMARY.md  MIGRATION_GUIDE.md  PERFORMANCE_GUIDE.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_SUMMARY.md  RATE_LIMITING_GUIDE.md  README.md  SECURITY_GUIDE.md  UNIFIED_ARCHITECTURE_GUIDE.md  UNIFIED_MIGRATION_GUIDE.md  chain_of_thought_monitoring.md  code_deduplication_report.md  new_tasks.md  real_data_setup.md
examples/: enhanced_crawler_demo.py  production_monitoring.py  production_sample.py  production_url_validator.py
frontend/: Dockerfile  Dockerfile.optimized  README.md  jest.config.js  next.config.js  next.config.optimized.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
k8s/: alertmanager.yaml  celery-exporter.yaml  grafana-dashboards.yaml  grafana-provisioning.yaml  grafana-secrets.yaml  grafana.yaml  kube-state-metrics.yaml  monitoring.yaml  node-exporter.yaml  postgres-exporter.yaml  prometheus.yaml  redis-exporter.yaml
migrations/: 000_create_migration_system.sql  001_add_performance_indexes.sql  002_add_authentication_tables.sql
monitoring/: README.md  __init__.py  alert_rules.yml  alertmanager.yml  comprehensive_health_checks.py  db_performance_monitor.py  enhanced_monitoring_system.py  enhanced_prometheus_metrics.py  grafana_dashboard.json  grafana_memory_dashboard.json  health_checks.py  memory_health_endpoint.py  monitoring_config.json  production_memory_monitor.py  prometheus.yml  unified_monitor.py  unified_monitoring.py
nginx/: nginx.conf  security.conf
requests/: README.md  REFACTORING_COMPARISON.md  __init__.py  advanced_crawler_refactored.py  async_gui_controller.py  async_gui_observer.py  base_crawler_interface.py  content_analyzer.py  crawler_gui_controller.py  crawler_gui_observer.py  crawler_gui_refactored.py  crawler_gui_views.py  download_chromedriver.py  metadata_extractor.py  resource_extractor.py  selenium_handler.py  test_refactored_crawler.py  url_requester.py
scripts/: build-cached.sh  build-optimized-v2.sh  build-optimized.ps1  build-optimized.sh  cleanup-monitoring.sh  crawl_airport_combinations.py  deploy-monitoring.sh  deploy_production.ps1  deploy_production.sh  deployment-monitor.py  import_airports.py  init_database.sh  initialize_database.py  install_dependencies.sh  manage-environments.sh  memory_benchmark_suite.py  memory_leak_detector.py  notification-manager.py  parse_saved_pages.py  performance_benchmark.py  performance_profiler.py  profile_crawler.py  quick-start-optimized.sh  replay_requests.py  rollback-production.sh  rollback-staging.sh  security-scan.ps1  security-scan.sh  start_production_monitoring.py  test_request_batching.py  test_ssl_manager.py  verify_dependencies.py  verify_performance_improvements.py
secrets/: db_password.txt  generate_secrets.sh  jwt_secret.txt  redis_password.txt  secret_key.txt
security/: __init__.py  authentication_middleware.py  authentication_system.py  authorization_system.py  data_encryption.py  docker_security_assessment.py  secret_manager.py  ssl_manager.py
tests/: README.md  conftest.py  test_adapter_specific_implementations.py  test_api.py  test_api_versioning.py  test_backward_compatibility.py  test_consolidation_integration.py  test_crawler.py  test_crawler_comprehensive.py  test_data_manager.py  test_end_to_end.py  test_end_to_end_enhanced.py  test_enhanced_adapters.py  test_enhanced_base_crawler_coverage.py  test_enhanced_error_handling.py  test_error_handler.py  test_exponential_backoff_strategies.py  test_filename_utils.py  test_integration.py  test_integration_adapters.py  test_integration_enhanced.py  test_integration_enhanced_error_handling.py  test_localization_manager.py  test_ml_predictor.py  test_monitoring.py  test_new_crawlers.py  test_performance.py  test_performance_enhanced.py  test_persian_text_processor.py  test_provider_insights.py  test_rate_limiting.py  test_real_data_validators.py  test_reporting.py  test_risk_mitigation.py  test_routes.py  test_search_engine.py  test_security.py  test_security_enhanced.py  test_sql_injection_security.py  test_unified_compatibility.py  (+1 more)
ui/: app.js  index.html  manual_crawl.html  module.js  route_config.html  style.css
utils/: file_utils.py  lazy_loader.py  memory_efficient_cache.py  persian_text_processor.py  request_batcher.py
(+174 files in other folders)
